# weather

./: Cargo.toml  README.md  providers.toml  version.properties
.github/workflow/: release.yml
.github/workflows/: release.yml
src/: main.rs
src/cli/: cli_app.rs  cli_error.rs  config.rs  configure_provider.rs  current_provider.rs  get_weather.rs  list_providers.rs  mod.rs  set_provider.rs  show_provider.rs
src/forecast/: current.rs  daily.rs  forecast_error.rs  mod.rs  process_provider_result.rs  request.rs  weather.rs
src/geocode/: address.rs  client.rs  dummy_client.rs  geocode_error.rs  mod.rs  open_weather_client.rs  parse_address.rs  point.rs  search_by_address.rs
src/geoip/: client.rs  config.rs  dummy_client.rs  geoip_error.rs  mod.rs  open_weather_client.rs  search_by_address.rs
src/providers/: dummy_provider.rs  mod.rs  open_weather.rs  provider.rs  provider_error.rs  wheatherapi.rs
