[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
dialoguer = { version = "0.10.0" }
clap = { version = "3.1.8", features = ["derive"] }
confy = { version = "0.4.0" }
chrono = { version = "0.4.19" }
